--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,110 @@
 /* You can add global styles to this file, and also import other style files */
+
+@import "~font-awesome/css/font-awesome.css";
+
+.btn {
+  margin-right: 5px;
+  font-size: 15px;
+}
+.btn-link {
+  cursor: pointer;
+}
+
+.well {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 20px;
+}
+
+.well div strong {
+  color: #5f6368;
+}
+.well div span {
+  color: #4d5156;
+}
+
+::-webkit-scrollbar {
+  width: 7px;
+}
+::-webkit-scrollbar-track {
+  background: #a3a3a3;
+}
+::-webkit-scrollbar-thumb {
+  background: #355cc9;
+}
+::-webkit-scrollbar-thumb:hover {
+  background: #355cc9;
+}
+
+.overflow {
+  overflow-x: hidden;
+  overflow-y: auto;
+  height: calc(100vh - 225px);
+}
+
+.loading {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.loading div {
+  display: inline-block;
+  width: 80px;
+  height: 80px;
+}
+.loading div:after {
+  content: " ";
+  display: block;
+  width: 64px;
+  height: 64px;
+  margin: 8px;
+  border-radius: 50%;
+  border: 6px solid #000;
+  border-color: #000 transparent #000 transparent;
+  animation: loading-animation 1.2s linear infinite;
+}
+@keyframes loading-animation {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+form .form-group {
+  position: relative;
+  margin-top: 1rem;
+  margin-bottom: 2rem;
+}
+
+form .form-group textarea {
+  resize: none;
+}
+
+form .form-group label {
+  position: absolute;
+  top: -4px;
+  left: 9px;
+  padding: 10px 0;
+  font-size: 16px;
+  color: #495057;
+  pointer-events: none;
+  transition: 0.5s;
+}
+
+form .form-group textarea:focus ~ label,
+form .form-group textarea:valid ~ label,
+form .form-group input:focus ~ label,
+form .form-group input:valid ~ label {
+  top: -34px;
+  left: 0;
+  color: #212529;
+  font-size: 14px;
+}
